--- a/wiki/WikiTrashSpace.wiki
+++ b/wiki/WikiTrashSpace.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary TrashSpace el mejor juego OPengel y C++
 #labels Phase-Deploy,Phase-Support
 
 = INTRODUCCION =
