--- a/wiki/Fuentes.wiki
+++ b/wiki/Fuentes.wiki
@@ -2,5 +2,6 @@
 #labels Phase-Requirements,Phase-Implementation,Phase-Design,Phase-QA,Featured
 
 ===Para poder revisar el codigo fuente con svn ===
-copia la siguiente intruccion en el cliente Subversion
+Copia la siguiente intruccion en el cliente Subversion
+
 *svn checkout http://trashspace.googlecode.com/svn/trunk/ trashspace*
